--- a/Build_a_game/css/pkmnbattlesim.css
+++ b/Build_a_game/css/pkmnbattlesim.css
@@ -84,3 +84,19 @@
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
+
+.container{
+    width: 1000px;
+    height: 700px;
+}
+
+.container.scroll {
+    margin: 4px, 4px;
+    padding: 4px;
+    background-color: green;
+    width: 500px;
+    height: 110px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    text-align: justify;
+}
