scrolling + pokemon buttons fixed

--- a/Build_a_game/css/pkmnbattlesim.css
+++ b/Build_a_game/css/pkmnbattlesim.css
@@ -88,15 +88,6 @@
 .container{
     width: 1000px;
     height: 700px;
-}
-
-.container.scroll {
-    margin: 4px, 4px;
-    padding: 4px;
-    background-color: green;
-    width: 500px;
-    height: 110px;
-    overflow-x: hidden;
-    overflow-y: auto;
-    text-align: justify;
+    overflow: hidden;
+    overflow-y: scroll;
 }
