--- a/Build_a_game/css/pkmnbattlesim.css
+++ b/Build_a_game/css/pkmnbattlesim.css
@@ -91,3 +91,51 @@
     overflow: hidden;
     overflow-y: scroll;
 }
+
+.chosenpkmngrid{
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    gap: 10px;
+    background-color: #2196F3;
+    padding: 10px;
+}
+
+.chosenpkmngrid > div{
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid black;
+    text-align: center;
+}
+
+/** pkmn buttons **/
+
+.pkmn1btn{
+    background-color: transparent;
+    border: none;
+}
+
+.pkmn2btn{
+    background-color: transparent;
+    border: none;
+}
+
+.pkmn3btn{
+    background-color: transparent;
+    border: none;
+}
+
+.pkmn4btn{
+    background-color: transparent;
+    border: none;
+}
+
+.pkmn5btn{
+    background-color: transparent;
+    border: none;
+}
+
+.pkmn6btn{
+    background-color: transparent;
+    border: none;
+}
+
+/** pkmn buttons end **/
