--- a/Build_a_game/css/pkmnbattlesim.css
+++ b/Build_a_game/css/pkmnbattlesim.css
@@ -138,4 +138,16 @@
     border: none;
 }
 
+.statscreen{
+    width: 300px;
+    height: 500px;
+   /** centre **/
+   margin: 0;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   -ms-transform: translate(-50%, -50%);
+   transform: translate(-50%, -50%);
+    background-color: aqua;
+}
 /** pkmn buttons end **/
